--- a/ios/MapExample/Base.lproj/LaunchScreen.xib
+++ b/ios/MapExample/Base.lproj/LaunchScreen.xib
@@ -15,8 +15,8 @@
             <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="Laddningsskarm" translatesAutoresizingMaskIntoConstraints="NO" id="0zK-BY-ztd">
-                    <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="LaddningsskarmV2" translatesAutoresizingMaskIntoConstraints="NO" id="0zK-BY-ztd">
+                    <rect key="frame" x="-15" y="-14" width="403" height="696"/>
                     <autoresizingMask key="autoresizingMask" flexibleMinX="YES" widthSizable="YES" flexibleMaxX="YES" flexibleMinY="YES" heightSizable="YES" flexibleMaxY="YES"/>
                 </imageView>
             </subviews>
@@ -27,6 +27,6 @@
         </view>
     </objects>
     <resources>
-        <image name="Laddningsskarm" width="2480" height="3508"/>
+        <image name="LaddningsskarmV2" width="375" height="667"/>
     </resources>
 </document>
